[project]
name        = "nvibrant"
description = "🟢 Nvidia Digital Vibrance on Wayland"
authors     = [{name="Tremeschin", email="29046864+Tremeschin@users.noreply.github.com"}]
dynamic     = ["version"]
readme      = "readme.md"
license     = "GPL-3.0"
requires-python = ">=3.9"
dependencies = [
    "meson~=1.7.0",
    "ninja~=1.11.1.4",
]

[project.scripts]
nvibrant-actions = "nvibrant.__main__:actions"
nvibrant-build   = "nvibrant.__main__:build"
nvibrant         = "nvibrant.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "nvibrant/version.py"

[tool.hatch.build.targets.wheel]
packages = ["nvibrant"]

[tool.hatch.build.targets.sdist]
exclude = ["*"]

[tool.hatch.build]
exclude = ["main.cpp"]
