[tool.hatch.version]
path = "nvibrant/version.py"

[project]
name        = "nvibrant"
description = "🟢 Nvidia Digital Vibrance on Wayland"
authors     = [{name="Tremeschin", email="29046864+Tremeschin@users.noreply.github.com"}]
dynamic     = ["version"]
readme      = "readme.md"
license     = "GPL-3.0"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
nvibrant = "nvibrant.__main__:main"

[tool.uv]
dev-dependencies = [
    "meson~=1.7.2",
    "ninja~=1.11.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nvibrant"]
ignore-vcs = true

[tool.hatch.build.targets.sdist]
exclude = ["open-gpu"]
ignore-vcs = true

[tool.hatch.build]
exclude = ["main.cpp"]
